[gd_scene load_steps=5 format=3 uid="uid://j3oj5ejfh41c"]

[ext_resource type="Script" path="res://Game/Game.gd" id="1_q466u"]
[ext_resource type="PackedScene" uid="uid://bvgggvsbtlvxw" path="res://Game/Player/Player.tscn" id="2_1b36i"]
[ext_resource type="PackedScene" uid="uid://cebb8iab1rafj" path="res://Game/GameHUD.tscn" id="3_wgmpb"]
[ext_resource type="PackedScene" uid="uid://bs4ghfkr4i0wn" path="res://Game/Levels/level_test.tscn" id="5_odpxs"]

[node name="Game" type="Node2D"]
script = ExtResource("1_q466u")
PLANTS_TO_SPAWN = 1.0

[node name="Player" parent="." instance=ExtResource("2_1b36i")]
position = Vector2(371, 469)

[node name="PlantSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="GameHUD" parent="." instance=ExtResource("3_wgmpb")]

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="Level_01" parent="." instance=ExtResource("5_odpxs")]
metadata/_edit_lock_ = true

[connection signal="harvested_changed" from="Player" to="." method="_on_player_harvested_changed"]
[connection signal="timeout" from="PlantSpawnTimer" to="." method="_on_plant_spawn_timer_timeout"]
[connection signal="init_hud" from="GameHUD" to="." method="_on_game_hud_init_hud"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
